--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04.md
@@ -3,7 +3,6 @@ title = "०४"
 
 +++
 
-
 चतुर्थः सर्गः।  
 शारदा शारदाम्भोजवदना वदनाम्बुजे ।  
 सर्वदा सर्वदाऽस्माकं सन्निधिं संनिधिं क्रियात् ॥  
@@ -44,7 +43,8 @@ title = "०४"
   
 मन्दोत्कण्ठाः कृतास्तेन गुणाधिकतया गुरौ ।  
 फलेन सहकारस्य पुष्पोद्गम इव प्रजाः ॥ 9 ॥  
-मन्देति॥ तेन रघुणा प्रजा गुरौ दिलीपविषये। सहकारोऽतिसौरभश्चूतः। 'आम्रश्चूतो रसालोऽसौ सहकारोऽसौरभः' इत्यमरः। तस्य फलेन पुष्पोद्गमे पुष्पोदय इव। ततोऽपि गुणाधिकतया हेतुना मन्दोत्कण्ठा अल्पौत्सुक्याः कृताः। गुणोत्तरश्चोत्तरो विषयः पूर्वं विस्मारयतीति भावः॥ 9 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 नयविद्भिर्नवे राज्ञि सदसञ्चोपदर्शितम् । ॥ 9 ॥   
 पूर्वं एवाभवत्पक्षस्तस्मिन्नाभवदुत्तरः ॥ 10 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/10.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -354,7 +354,8 @@ title = "०४"
     र्गुर्वीभिः शमितपराजयव्यलीकान् ।  
 काकुत्स्थश्चिरविरहोत्सुकावरोधान्  
     राजन्यान्स्वपुरनिवृत्तयेऽनुमेने ॥ 87 ॥  
-सत्रान्त इति॥ काकुत्स्थो रघुः सत्रान्ते यज्ञान्ते। 'सत्रमाच्छादने यज्ञे सदादाने धनेऽपि च' इत्यमरः। सचिवानाममात्यानां सखेति सचिवसखः सन्। 'सचिवो भृतकेऽमात्ये' इति हैमः। तेषामत्यन्तानुसरणद्योतनार्थं राज्ञः सखित्वव्यपदेशः। 'राजाहःसखिभ्यष्टच्'(पा.5।4।91) गुर्वीभिर्महतीभिः। 'गुरुर्महत्याङ्गिरसे पित्रादौ धर्मदेशके' इति हैमः। पुरस्क्रियाभिः पूजाभिः शमितं पराजयेन व्यलीकं दुःखं वैलक्ष्यं वा येषां तान्। 'दुःखे वैलक्ष्ये व्यलीकम्' इति यादवः। चिरविरहेणोत्सुका उत्कण्ठिता अवरोधा अन्तःपुराङ्गना येषां तान्। राज्ञोऽपत्यानि राजन्याः क्षत्रियाः। तान्। 'राजश्वशुराद्यत्'(पा.4।1।137) इत्यपत्यार्थे यत्प्रत्ययः। 'मूर्धाभिषिक्तो राजन्यो बाहुजः क्षत्रियो विराट्'इत्यमरः। स्वपुरं प्रतिनिवृत्तये प्रतिगमनायानुमेनेऽनुज्ञातवान् । प्रहर्षिणीवृत्तमेतत्। तदुक्तम्-'म्नौ ज्रौ गस्त्त्रिदशयतिः प्रहर्षिणीयम्'इति ॥ 87 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/87.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
   
 ते रेखाध्वजकुलिशातपत्रचिह्नं  
@@ -364,5 +365,4 @@ title = "०४"
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ रघुदिग्विजयो नाम चतुर्थः सर्गः ।  
  त इति॥ ते राजानः । रेखा एव ध्वजाश्च कुलिशानि चातपत्राणि च। ध्वजाद्याकाररेखा इत्यर्थः। तानि चिह्नानि यस्य तत्तथोक्तम्। प्रसादेनैव लभ्यं प्रसादलभ्यम्। सम्राजः सार्वभौमस्य रघोश्चरणयुगं प्रस्थाने प्रयाणसमये याः प्रणतयो नमस्कारास्ताभिः करणैः। अङ्गुलीषु। मौलिषु केशबन्धेषु याः स्रजो माल्यानि ताभ्यश्च्युतैर्मकरन्दैः पुष्परसैः। 'मकरन्दः पुष्परसः' इत्यमरः। रेणुभिः परागैश्च। 'परागः सुमनोरजः' इत्यमरः। गौरं गौरवर्णं चक्रुः। ॥ 88 ॥  
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां चतुर्थः सर्गः ।  
-
 
