--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06.md
@@ -3,8 +3,6 @@ title = "०६"
 
 +++
 
-
-
 षष्ठः सर्गः ।  
 जाह्नवी मूर्ध्नि पादे वा कालः कण्ठे वपुष्यथ ।  
 कामारिं कामतातं वा कंचिदेकं भजामहे ॥  
@@ -304,11 +302,13 @@ title = "०६"
   
 जातः कुले तस्य किलोरुकीर्तिः कुलप्रदीपो नृपतिर्दिलीपः ।  
 अतिष्ठदेकोनशतक्रतुत्वे शक्राभ्यसूयाविनिवृत्तये यः ॥ 74 ॥  
-जात इति॥ उरुकीर्तिर्महायशाः कुलप्रदीपो वंशप्रदीपको दिलीपो नृपतिस्तस्य ककुत्स्थस्य कुले जातः किल। यो दिलीपः शक्राभ्यसूयाविनिवृत्तये। न त्वशक्त्येति भावः। एकेनोनाः शतं क्रतवो यस्य स एकोनशतक्रतुस्तस्य भावे तत्त्वेऽतिष्ठत्। इन्द्रप्रीतये शततमं क्रतुमवशेषितवानित्यर्थः। ॥ 74 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 
 यस्मिन्महीं शासति वाणिनीनां निद्रां विहारार्धपथे गतानाम् ।  
 वातोऽपि नास्रंसयदंशुकानि को लम्बयेदाहरणाय हस्तम् ॥ 75 ॥  
-यस्मिन्निति॥ यस्मिन् दिलीपे महीं शासति सति। विहरत्यत्रेति विहारः क्रीडास्थानम्। तस्यार्धपथे निद्रां गतानां वाणिनीनां मत्ताङ्गनानाम्। 'वाणिनी नर्तकीमत्ताविदग्धवनितासु च' इति विश्वः। 'वाणिन्यौ नर्तकीमत्तेै'इत्यमरश्च। अंशुकानि वस्त्राणि वातोऽपि नास्रंसयन्नाकम्पयत्। आहरणायापहर्तुं को हस्तं लम्बयेत्? तस्याज्ञासिद्धत्वादकुतोभयसंचाराः प्रजा इत्यर्थः। अर्धश्चासौ पन्थाश्चेति विग्रहः। समप्रविभागे प्रमाणाभावान्नैकदेशिसमासः ॥ 75 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 
 पुत्रो रघुस्तस्य पदं प्रशास्ति महाक्रतोर्विश्वजितः प्रयोक्ता ।  
 चतुर्दिगावर्जितसंभृतां यो मृत्पात्रशेषामकरोद्विभूतिम् ॥ 76 ॥  
@@ -357,5 +357,4 @@ title = "०६"
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/86.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीवननीसमाख्यायां रघुवंशटीकायां षष्ठः सर्गः ।  
-
 
