--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16.md
@@ -3,8 +3,6 @@ title = "१६"
 
 +++
 
-
-
 षोडशः सर्गः।  
 वृन्दारका यस्य भवन्ति भृङ्गा मन्दाकिनी यन्मकरन्दबिन्दुः ।  
 तवारविन्दाक्ष! पदारविन्दं वन्दे चतुर्वर्गचतुष्पदं तत् ॥  
@@ -37,6 +35,7 @@ title = "१६"
 का त्वं शुभे! कस्य परिग्रहो वा किं वा मदभ्यागमकारणं ते ।  
 आचक्ष्व मत्वा वशिनां रघूणां मनः परस्त्रीविमुखप्रवृत्ति ॥ 8 ॥  
 लब्धेति॥ का त्वमिति च॥ युग्मम्। सावरणेऽपि गेहे लब्धान्तरा लब्धावकाशा। त्वमिति शेषः। योगप्रभावश्च ते न लक्ष्यते। मृणालिनी हैमं हिमकृतमुपरागमुपद्रवमिव। अनिर्वृतानां दुःखितानामाकारं बिभर्षि च। न हि योगिनां दुःखमस्तीति भावः। किं च,हे शुभे! त्वं का? कस्य वा परिग्रहः पन्ती? ते तव मदभ्यागमे कारणं वा किम्? वशिनां जितेन्द्रियाणां रघूणां मनः परस्त्रीषु विषये विमुखा प्रवृत्तिर्यस्य तत्तथाभूतं मत्वाऽऽचक्ष्व ॥ 7-8 ॥  
+
 तमब्रवीत्सा गुरुणानवद्या या नीतपौरा स्वपदोन्मुखेन ।  
 तस्याः पुरः संप्रति वीतनाथां जानीहि राजन्निधिदेवतां माम् ॥ 9 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -284,7 +283,8 @@ title = "१६"
   
 वर्णोदकैः काञ्चनश्रृङ्गमुक्तैसतमायताक्ष्यः प्रणयादसिञ्चन् ।  
 तथागतः सोऽतितरां बभासे सधातुनिष्यन्द इवाद्रिराजः ॥ 70 ॥  
-वर्णोदकैरिति॥ तं कुशम्। आयताक्ष्यः काञ्चनस्य शृङ्गैर्मुक्तानि तैर्वर्णोदकैः कुङ्कुमादिवर्णद्रव्यसहितोदकैः प्रणयात्स्नेहादसिञ्चन्। तथागतस्तथास्थितः। वर्णोदकसिक्त इत्यर्थः। स कुशः सधातुनिष्यन्दो गैरिकद्रव्ययुक्तोऽद्रिराज इव। अतितरां बभासेऽत्यर्थं चकासे ॥ 70 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 तेनावरोधप्रमदासखेन विगाहमानेन सरिद्वरां ताम् ।  
 आकाशगङ्गारतिरप्सरोभिर्वृतो मरुत्वाननुयातलीलः ॥ 71 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/71.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -365,5 +365,4 @@ title = "१६"
   
 
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां षोडशः सर्गः ।  
-
 
