--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10.md
@@ -3,8 +3,6 @@ title = "१०"
 
 +++
 
-
-
 दशमः सर्गः।  
 आशंसे नित्यमानन्दं रामनामकथामृतम् ।  
 सद्भिः स्वश्रवणैर्नित्यं पेयं पापं प्रणोदितुम् ॥  
@@ -229,12 +227,10 @@ title = "१०"
   
 स तेजो वैष्णवं पत्न्योर्विभेजे चरुसंज्ञितम् ।  
 द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम् ॥ 54 ॥  
-स इति॥ स नृपः चरुसंज्ञाऽस्य संजाता चरुसंज्ञितम्। वैष्णवं तेजः पत्न्योः कौसल्या-कैकेय्योः। द्योश्च पृथिवी च द्यावा-पृथिव्यौ। 'दिवसश्च पृथिव्याम्'इति चकारात् 'दिव्'शब्दस्य द्यावादेशः। तयोर्द्यावापृथिव्योः। अह्नः पतिरहर्पतिः। 'अहरादीनां पत्यादिषु वा रेफः'(वा.4815)इत्युपसंख्यानाद्वैकल्पिको रेफस्य रेफादेशो विसर्गापवादः। प्रत्यग्रमातपं बालातपमिवप। विभेजे। विभज्य ददावित्यर्थः ॥ 54 ।  
+स इति॥ स नृपः चरुसंज्ञाऽस्य संजाता चरुसंज्ञितम्। वैष्णवं तेजः पत्न्योः कौसल्या-कैकेय्योः। द्योश्च पृथिवी च द्यावा-पृथिव्यौ। 'दिवसश्च पृथिव्याम्'इति चकारात् 'दिव्'शब्दस्य द्यावादेशः। तयोर्द्यावापृथिव्योः। अह्नः पतिरहर्पतिः। 'अहरादीनां पत्यादिषु वा रेफः'(वा.4815)इत्युपसंख्यानाद्वैकल्पिको रेफस्य रेफादेशो विसर्गापवादः। प्रत्यग्रमातपं बालातपमिवप। विभेजे। विभज्य ददावित्यर्थः ॥ 54 ॥   
 पत्नीत्रये सति द्वयोरेव विभागे कारणमाह-  
 अर्चिता तस्य कौसल्या प्रिया केकयवंशजा ।  
 अतः संभावितां ताभ्यां सुमित्रामैच्छदीश्वरः ॥ 55 ॥  
-  
-  
 अर्चितेति॥ तस्य राज्ञः। कौ पृथिव्यां सलति गच्छतीति कोसलः। 'सलगतौ'पचाद्यच्। कुशब्दस्य पृषोदरादित्वाद्गुणः। कोसलस्य राज्ञोऽपत्यं स्त्री कौसल्या। 'वृद्धेत्कोसलाजादाञ्ञ्यङ्'(पा.4।1।171) इति ञ्यङ्,'यङश्चाप्'(पा.4।1।74)इति चाप्। अत एव सूत्रे निर्देशात् 'कोसल'शब्दो दन्त्यसकारमध्यमः। अर्चिता ज्येष्टा मान्या। केकयवंशजा कैकेयी। प्रियेष्टा। अतो हेतोः,ईश्वरो भर्ता नृपः सुमित्रां ताभ्यां कौसल्या-कैकेयीभ्यां संभावितां भागदानेन मानितामैच्छदिच्छति स्म। एवं च सामान्यं तिसृणां च भागप्रापणमिति राज्ञ्युचितज्ञता कौशलं च लभ्यते ॥ 55 ॥  
 ते बहुज्ञस्य चित्तज्ञे पत्न्यौ पत्युर्महीक्षितः ।  
 चरोरर्धार्धभागाभ्यां तामयोजयतामुभे ॥ 56 ॥  
