--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/75.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/75.md
@@ -2,6 +2,4 @@
 title = "75"
 
 +++
-जात इति॥ उरुकीर्तिर्महायशाः कुलप्रदीपो वंशप्रदीपको दिलीपो नृपतिस्तस्य ककुत्स्थस्य कुले जातः किल। यो दिलीपः शक्राभ्यसूयाविनिवृत्तये। न त्वशक्त्येति भावः। एकेनोनाः शतं क्रतवो यस्य स एकोनशतक्रतुस्तस्य भावे तत्त्वेऽतिष्ठत्। इन्द्रप्रीतये शततमं क्रतुमवशेषितवानित्यर्थः। 6.74 ॥  
-यस्मिन्महीं शासति वाणिनीनां निद्रां विहारार्धपथे गतानाम् ।  
-वातोऽपि नास्रंसयदंशुकानि को लम्बयेदाहरणाय हस्तम् ॥ 75 ॥
+यस्मिन्निति॥ यस्मिन् दिलीपे महीं शासति सति। विहरत्यत्रेति विहारः क्रीडास्थानम्। तस्यार्धपथे निद्रां गतानां वाणिनीनां मत्ताङ्गनानाम्। 'वाणिनी नर्तकीमत्ताविदग्धवनितासु च' इति विश्वः। 'वाणिन्यौ नर्तकीमत्तेै'इत्यमरश्च। अंशुकानि वस्त्राणि वातोऽपि नास्रंसयन्नाकम्पयत्। आहरणायापहर्तुं को हस्तं लम्बयेत्? तस्याज्ञासिद्धत्वादकुतोभयसंचाराः प्रजा इत्यर्थः। अर्धश्चासौ पन्थाश्चेति विग्रहः। समप्रविभागे प्रमाणाभावान्नैकदेशिसमासः ॥ 75 ॥
