--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/09.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/09.md
@@ -2,5 +2,6 @@
 title = "09"
 
 +++
-  
-तमिति॥ सा वनिता तं कुशमब्रवीत्। अनवद्याऽदोषा या पूःस्वपदोन्मुखेन विष्णुपदोन्मुखेन गुरुणा त्वत्पित्रा नीतपौरा हे राजन्! मां संप्रति वीतनाथामनाथां तस्याः पुरो नगर्या अयोध्याया अधिदेवतां जानीहि ॥ 9 ॥
+लब्धेति॥ का त्वमिति च॥ युग्मम्। सावरणेऽपि गेहे लब्धान्तरा लब्धावकाशा। त्वमिति शेषः। योगप्रभावश्च ते न लक्ष्यते। मृणालिनी हैमं हिमकृतमुपरागमुपद्रवमिव। अनिर्वृतानां दुःखितानामाकारं बिभर्षि च। न हि योगिनां दुःखमस्तीति भावः। किं च,हे शुभे! त्वं का? कस्य वा परिग्रहः पन्ती? ते तव मदभ्यागमे कारणं वा किम्? वशिनां जितेन्द्रियाणां रघूणां मनः परस्त्रीषु विषये विमुखा प्रवृत्तिर्यस्य तत्तथाभूतं मत्वाऽऽचक्ष्व ॥ 7-8 ॥  
+तमब्रवीत्सा गुरुणानवद्या या नीतपौरा स्वपदोन्मुखेन ।  
+तस्याः पुरः संप्रति वीतनाथां जानीहि राजन्निधिदेवतां माम् ॥ 9 ॥
