--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md
@@ -2,6 +2,4 @@
 title = "65"
 
 +++
-तत इति॥ ततो मानितार्थी। स्वहस्तार्जितो वीर इति शब्दो येन सः। एतेनास्य दातृत्वं दैन्यराहित्यं चोक्तम्। स राजा हस्तौ समानीय संधाय। अञ्जलिं बद्ध्वेत्यर्थः। वंशस्य कर्तारं प्रवर्तयितारम्। अत एव रघुकुलमिति प्रसिद्धिः। अनन्तकीर्तिं स्थिरयशसं तनयं सुदक्षिणायां ययाचे ॥ 64 ।  
-संतानकामाय तथेति कामं राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
-दुग्ध्वा पयः पत्रपुटे मदीयं पुत्रोपभुङ्क्ष्वेति तमादिदेश ॥ 65 ॥
+संतानेति॥ सा पयस्विनी गौः। संतानं कामयत इति ह्यंतानकामः। 'कर्मण्यण्'(पा.3।2।1)तस्मै राज्ञे तथेति। काम्यत इति कामो वरः। कर्मार्थे घञप्रत्ययः। तं प्रतिश्रुत्य प्रतिज्ञाय,'हे पुत्र!मदीयं पयः पत्रपुटे पत्रनिर्मिते पात्रे दुग्ध्वोपभुङ्क्ष्व पिब' इति तमादिदेशाज्ञापितवती। 'उपयुङ्क्ष्व' इति वा पाठः॥ 65 ॥
