--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/54.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/54.md
@@ -2,6 +2,4 @@
 title = "54"
 
 +++
-कृतेति॥ शूद्रः शम्बुको राज्ञा स्वयं कृतदण्डः कृतशिक्षः सन्। सतां गतिं लेभे। दुश्चरेणापि स्वमार्गविलङ्घिना। अनधिकारदुष्टेनेत्यर्थः। तपसा न लेभे। अत्र मनुः(8।3।18) 'राजभिः कृतदण्डास्तु कृत्वा पापानि मानवाः। निर्मलाः स्वर्गमायान्ति सन्तः मुकृतिनो यथा ॥' इति॥ 53 ॥  
-रघुनाथोऽप्यगस्त्येन मार्गसंदर्शितात्मना ।  
-महौजसा संयुयुजे शरत्काल इवेन्दुना ॥ 54 ॥
+रघुनाथ इति॥ रघुनाथोऽपि मार्गसंदर्शितात्मना महौजसाऽगस्त्येन। इन्दुना शरत्काल इव संयुयुजे संगतः। इन्दावपि विशेषणं योज्यम्‌। 'रघुनाथ' इत्यत्र क्षुभ्रादित्वाण्णत्वाभावः ॥ 54 ॥
