--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
@@ -3,6 +3,7 @@ title = "०३"
 
 +++
 
+
 तृतीयः सर्गः  
 उपाधिगम्योऽप्यनुपाधिगम्यः समावलोक्योऽप्यसमावलोक्यः ।  
 भवोऽपि योऽभूदभवः शिवोऽयं जगत्यपायादपि नः स पायात् ॥  
@@ -64,10 +65,12 @@ title = "०३"
   
 दिशः प्रसेदुर्मरुतो ववुः सुखाः प्रदक्षिणार्चिर्हविरग्निराददे ।  
 बभूव सर्वं शुभशंसि तत्क्षणं भवो हि लोकाभ्युदयाय तादृशाम् ॥ 14 ॥  
-दिश इति॥ तत्क्षणं तस्मिन्क्षणे। 'कालाध्वनोरत्यन्तसंयोगे द्वितीया' (पा.2।3।5)दिशः प्रसेदुः प्रसन्ना बभूवुः। मरुतो वाताः सुखा मनोहरा ववुः। अग्निः प्रदक्षिणार्चिः सन् हविराददे स्वीचकार । इत्थँ सर्वं शुभशंसि शुभसूचकं बभूव। तथा हि-तादृशां रघुप्रकाराणां भवो जन्म लोकाभ्युदयाय। भवतीति शेषः। ततो देवा अपि संतुष्टा इत्यर्थः। ॥ 14 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/14.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 अरिष्टशय्यां परितो विसारिणा सुजन्मनस्तस्य निजेन तेजसा ।  
 निशीथदीपाः सहसा हतत्विषो बभूवुरालेख्यसमर्पिता इव ॥ 15 ॥  
-अरिष्टेति॥ 'अरिष्टं सूतिकागृहम्' इत्यमरः। अरिष्टे सूतिकागृहे शय्यां तल्पं परितः सर्वतः। 'अभितः परितः समयानिकषाप्रतियोगेऽपि'(वा.1422) इति द्वितीया। विसारिणा। सुजन्मनः शोभनोत्पत्तेः। 'जनुर्जननजन्मानि जनिरुत्पत्तिरुद्भवः' इत्यमरः। तस्य शिशोर्निजेन नैसर्गिकेण तेजसा सहसा हतत्विषः क्षीणकान्तयो निशीथदीपा अर्धरात्रप्रदीपाः 'अर्धरात्रनिशीथौद्वौ'इत्यमरः। आलेख्ये चित्रे समर्पिता इव बभूवुः। 'निशीथ'शब्दो दीपानां प्रभाधिक्यसंभावनार्थः॥ 15 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/15.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 जनाय शुद्धान्तचराय शंसते कुमारजन्मामृतसंमिताक्षरम् ।  
 अदेयमासीत्त्रयमेव भूपतेः शशिप्रभ छत्रमुभे च चामरे ॥ 16 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/16.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
