--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11.md
@@ -3,6 +3,7 @@ title = "११"
 
 +++
 
+
 एकादशः सर्गः।  
 रामचन्द्रचरणारविन्दयोरन्तरङ्गचरभृङ्गलीलया ।  
 तत्र सन्ति हि रसाश्चतुर्विधास्तान्यथारुचि सदैव निर्विश ॥   
@@ -242,7 +243,8 @@ title = "११"
   
 लक्ष्यते स्म तदनन्तरं रविर्बद्धभीमपरिवेषमण्डलः ।  
 वैनतेयशमितस्य भोगिनो भोगवेष्टित इव च्युतो मणिः ॥ 59 ॥  
-लक्ष्यत इति॥ तदनन्तरं प्रतीपपवनानन्तरं बद्धं भीमं परिवेषस्य परिधेर्मण्डलं यस्य सः। 'परिवेषस्तु परिधिरुपसूर्यकमण्डले' इत्यमरः। रविः। वैनतेयशमितस्य गरुडहतस्य भोगिनः सर्पस्य भोगेन कायेन। 'भोगः सुखे स्त्रअयादिभृतावहेश्च फणकाययोः' इत्यमरः। वेष्टितश्च्युतः शिरोभ्रष्टो मणिरिव लक्ष्यते स्म ॥ 59 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/59.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
   
   
