--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
@@ -3,6 +3,7 @@ title = "१४"
 
 +++
 
+
 चतुर्दशः सर्गः।  
 संजीवनं मैथिलकन्यकायाः सौन्दर्यसर्वस्वमहानिधानम् ।  
 शशाङ्कपङ्केरुहयोः समानं रामस्य वन्दे रमणीयमास्यम् ॥  
@@ -233,7 +234,8 @@ title = "१४"
   
 न चावदद्भर्तुरवर्णमार्या निराकरिष्णोर्वृजिनादृतेऽपि ।  
 आत्मानमेव स्थिरदुःखभाजं पुनः पुनर्दुष्कृतिनं निनिन्द ॥ 57 ॥  
-न चेति॥ आर्या साध्वी सीता वृजिनादृत एनसो विनापि। 'कलुषं वृजिनैनोऽघम्' इत्यमरः। 'अन्यारादितरर्ते-'(पा.2।3।29) इत्यादिना पञ्चमी। निराकरिष्णोर्निरासकस्य। 'अलंकृञ्-'(पा.3।2।136) इत्यादिनेष्णुच्प्रत्ययः। भर्तुरवर्णमपवादं न चावदन्नैवावादीत्। किंतु स्थिरदुःखभाजमत एव दुष्कृतिनमात्मानं पुनः पुनर्निनिन्द ॥ 57 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/57.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
   
   
